--- a/views/products/edit.ejs
+++ b/views/products/edit.ejs
@@ -8,13 +8,18 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link rel="stylesheet" href="/stylesheets/edit.css" />
+  <style>
+    body {
+      background-color: aquamarine;
+    }
+  </style>
 </head>
 
 <body>
   <h1 style="text-align: center;">Update Note</h1>
   <form action="/products/<%=product._id%>?_method=PUT" method="POST" id="data">
     <div class="form-group">
-      <label for="title">Product title</label>
+      <label for="title">Title</label>
       <input type="text" class="form-control" name="title" id="title" placeholder="product title"
         value="<%=product.title%>">
     </div>
