--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -4,7 +4,6 @@
 <head>
   <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
-  <link rel="stylesheet" href="FinalNotes-main\public\stylesheets\index.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -12,6 +11,13 @@
 
   <link rel="stylesheet" href="/stylesheets/index.css" />
   <title>All My Notes</title>
+  <style>
+    body {
+      background-image: url('/stylesheets/photo-4.jpg');
+      background-size: cover;
+
+    }
+  </style>
 </head>
 
 <body>
