--- a/views/products/new.ejs
+++ b/views/products/new.ejs
@@ -14,6 +14,11 @@
   <script src="https://kit.fontawesome.com/91abd10b8f.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="/stylesheets/new.css" />
+  <style>
+    body {
+      background-color: orange;
+    }
+  </style>
   <title>Create New Notes</title>
 </head>
 
@@ -21,13 +26,13 @@
   <h1 style="text-align: center;">Add New Note</h1>
   <form action="/products" method="POST" id="data">
     <div class="form-group">
-      <label for="title">Product title</label>
-      <input type="text" class="form-control" name="title" id="title" placeholder="product title">
+      <label for="title">Title</label>
+      <input type="text" class="form-control" name="title" id="title" placeholder="Title" required>
     </div>
     <div class="form-group">
-      <label for="description">description</label>
-      <textarea type="text" name="description" placeholder="description" class="form-control" rows="5"
-        id="comment"></textarea>
+      <label for="description">Description</label>
+      <textarea type="text" name="description" placeholder="Description" class="form-control" rows="5" id="comment"
+        required></textarea>
       <!-- <input type="text" id="description" name="description" placeholder="description"> -->
     </div>
     <button class="btn btn-success">Submit</button>
